# internal/types/interfaces/project.go
@@ -12,6 +12,11 @@ type ProjectService interface {
 	GetActiveProjectByUserID(ctx context.Context, userID string) (*types.Project, error)
 	AddUserProject(ctx context.Context, userID, projectID string) error
 	ActivateUserProject(ctx context.Context, userID, projectID string) error
+	AddProjectReport(ctx context.Context, userID string, report *types.ProjectReport) error
+	UpdateProjectReport(ctx context.Context, userID string, report *types.ProjectReport) error
+	DeleteProjectReport(ctx context.Context, userID string, reportID int64) error
+	ListProjectReportByProjectID(ctx context.Context, userID, projectID string) ([]*types.ProjectReport, error)
+	GetProjectReportDetailByID(ctx context.Context, userID string, reportID int64) (*types.ProjectReport, error)
 }
 
 // ProjectRepository defines project data access methods.
@@ -21,4 +26,9 @@ type ProjectRepository interface {
 	AddUserProject(ctx context.Context, up *types.UserProject) error
 	ExistsUserProject(ctx context.Context, userID, projectID string) (bool, error)
 	ActivateUserProject(ctx context.Context, userID, projectID string) error
+	AddProjectReport(ctx context.Context, report *types.ProjectReport) error
+	GetProjectReportByID(ctx context.Context, reportID int64) (*types.ProjectReport, error)
+	UpdateProjectReport(ctx context.Context, report *types.ProjectReport) error
+	DeleteProjectReport(ctx context.Context, projectID string, reportID int64) error
+	ListProjectReportByProjectID(ctx context.Context, projectID string) ([]*types.ProjectReport, error)
 }
